--- a/Beeter/app/src/main/res/layout/list_row_sting.xml
+++ b/Beeter/app/src/main/res/layout/list_row_sting.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/textUsername"
+            android:id="@+id/textID"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
